2006-07-27  Hendrik Tews  <tews@debian>

	AST:
	* finished astgen detachOcaml generation
	* added empty detach's for const types

	ELSA
	* added empty detach's for const types
	* Variable::detachOcaml finished
	* started detachOcaml in the CType hierarchy

2006-07-26  Hendrik Tews  <tews@tandem.cs.ru.nl>

	AST
	* started detachOcaml

2006-07-25  Hendrik Tews  <tews@debian>

	ASTGEN
	* moved ocaml_val into superclass (as protected)
	
	ELSA
	* cleanup some debuging output
	* the ocaml_val is only used in the following classes:
	  CompoundType CVAtomicType CompoundType_info Function ReferenceType
	  SimpleType Variable PointerType
	* longgest circular list 5266 (in/big/nsHTMLEditRules.i regtest 985)

2006-07-25  Hendrik Tews  <tews@tandem.cs.ru.nl>

	ELSA
	* nullable Function.body (in/big/nsAtomTable.i)
	* nullable NamedAtomicType.typedefVar (in/t0566.cc)
	* serialize PseudoInstantiation, TypeVariable, STemplateArgument
	* RENAMED STemplateArgument.value into sta_value
	* regtests pass

2006-07-25  Hendrik Tews  <tews@debian>

	ELSA
	* variable.var_name might be void
	* added EnumType::toOcaml
	* regression tests up to 568

2006-07-24  Hendrik Tews  <tews@debian>

	ELSA
	* identified another circularity (containing Function*)
	* regression tests up to 138

	* started support for circular structures
	  Potentially circular pointers get the ocaml type xxx option ref.
	  First None is assigned and the pointer is enqueued in 
	  postponed_circles in ToOcamlData. Later the pointer is
	  serialized in finish_circular_pointers and the reference is
	  updated with some Some x.
	* identified two circurlar points until now (containing CType*)

2006-07-20  Hendrik Tews  <tews@debian>

	* remove new vendor files again

2006-07-20  Hendrik Tews  <tews@localhost.localdomain>

	ELSA
	* rename Variable.value -> Variable.varValue (Variable.value
	  clashes with ocaml value) 
	* started ocaml serialization for Variable's
	* hand translated variable type is mutually recursive with other