@@ -12,6 +12,18 @@
 #include "cc_type.h"       // CType, FunctonType, CompoundType
 
 
+#define DEBUG_CAML_GLOBAL_ROOTS
+#ifdef DEBUG_CAML_GLOBAL_ROOTS
+
+#define caml_register_global_root debug_caml_register_global_root
+#define caml_remove_global_root debug_caml_remove_global_root
+void debug_caml_register_global_root (value *);
+void debug_caml_remove_global_root (value *);
+void print_caml_root_status();
+
+#endif
+
+
 enum CircularAstType {
   CA_Empty,
   CA_CType,
